fix center-alignment

--- a/assets/css/core/posts-and-pages.css
+++ b/assets/css/core/posts-and-pages.css
@@ -41,4 +41,8 @@
   font-size: calc(1em / var(--gridd-typo-scale, 1.26));
 }
 
+.has-text-align-center {
+  text-align: center;
+}
+
 /*# sourceMappingURL=posts-and-pages.css.map */
